--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
     "date-fns": "^2.0.0-alpha.27",
+    "dexie": "^2.0.4",
     "material-ui-pickers": "^2.2.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
