--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
     "date-fns": "^2.0.0-alpha.27",
-    "dexie": "^2.0.4",
     "material-ui-pickers": "^2.2.4",
+    "mongodb-stitch-browser-sdk": "^4.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
