--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@types/jest": "24.0.11",
-    "@types/node": "11.11.3",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.2",
-    "date-fns": "^2.0.0-alpha.27",
+    "@types/node": "11.15.54",
+    "@types/react": "16.14.6",
+    "@types/react-dom": "16..9.13",
+    "date-fns": "^2.21.3",
     "material-ui-pickers": "^2.2.4",
     "mongodb-stitch-browser-sdk": "^4.3.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "4.0.0",
-    "typescript": "3.3.3333"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "4.0.3",
+    "typescript": "4.3"
   },
   "scripts": {
     "start": "react-scripts start",
